--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#FFE1C4">
   <title>Notes</title>
-  <!-- <link rel="apple-touch-icon" href="/RaM_192x192.png"> -->
-  <!-- <link rel="apple-mobile-web-app-status-bar" content="#FFE1C4"> -->
-  <!-- <link rel="manifest" href="/manifest.json"> -->
+  <link rel="apple-touch-icon" href="/notes_192x192.png">
+  <link rel="apple-mobile-web-app-status-bar" content="#FFE1C4">
+  <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
